Prevent speech from overlapping objects

--- a/css/base.scss
+++ b/css/base.scss
@@ -27,6 +27,7 @@ body {
 /* Speech */
 
 #SpeechBox {
+  z-index: 999;
   font-family: 'VT323', monospace;
   height: 150px;
   font-size: 22px;
